--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ nav {
 }
 
 nav a {
+  text-decoration: none;
   color: white;
   font-size: 22px;
   font-family: Bai Jamjuree;
@@ -295,3 +296,4 @@ nav a {
   gap: 15px;
   font-size: 18px;
 }
+
